gpt3 notebook reproducible on Datalore

--- a/gpt3_code_embeddings.ipynb
+++ b/gpt3_code_embeddings.ipynb
@@ -17,18 +17,23 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://raw.githubusercontent.com/bzz/jet-search/master/requirements.txt\n",
-        "%pip install -r requirements.txt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "RR_CvFgJmpNn"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!wget https://raw.githubusercontent.com/bzz/jet-search/master/requirements.txt\n",
+        "%pip install -r requirements.txt"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "Xr4xewpAmwLQ"
+      },
+      "outputs": [],
       "source": [
         "model=\"text-embedding-ada-002\"\n",
         "code_emb_file = \"ij-communit-platform-functions-embeddings.pkl\"\n",
@@ -39,19 +44,11 @@
         "if ON_CLOUD:\n",
         "  from google.colab import auth\n",
         "  auth.authenticate_user()"
-      ],
-      "metadata": {
-        "id": "Xr4xewpAmwLQ"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gsutil cp \"gs://cc-eval/cs/$code_emb_file\" .\n",
-        "!gsutil cp \"gs://cc-eval/cs/$code_emb_index_file\" ."
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -59,30 +56,15 @@
         "id": "a2WK-kH2opLm",
         "outputId": "30ed6036-56c8-42d0-972c-b34af9249de6"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Copying gs://cc-eval/cs/ij-communit-platform-functions-embeddings.pkl...\n",
-            "/ [0 files][    0.0 B/  1.2 GiB]                                                \r==> NOTE: You are downloading one or more large file(s), which would\n",
-            "run significantly faster if you enabled sliced object downloads. This\n",
-            "feature is enabled by default but requires that compiled crcmod be\n",
-            "installed (see \"gsutil help crcmod\").\n",
-            "\n",
-            "\\ [1 files][  1.2 GiB/  1.2 GiB]   39.1 MiB/s                                   \n",
-            "Operation completed over 1 objects/1.2 GiB.                                      \n",
-            "Copying gs://cc-eval/cs/ij-communit-platform-functions-embeddings.ann...\n",
-            "==> NOTE: You are downloading one or more large file(s), which would\n",
-            "run significantly faster if you enabled sliced object downloads. This\n",
-            "feature is enabled by default but requires that compiled crcmod be\n",
-            "installed (see \"gsutil help crcmod\").\n",
-            "\n",
-            "- [1 files][  1.5 GiB/  1.5 GiB]   33.2 MiB/s                                   \n",
-            "Operation completed over 1 objects/1.5 GiB.                                      \n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "# on collab\n",
+        "# !gsutil cp \"gs://cc-eval/cs/$code_emb_file\" .\n",
+        "# !gsutil cp \"gs://cc-eval/cs/$code_emb_index_file\" .\n",
+        "\n",
+        "# on Datalore\n",
+        "!wget 'https://storage.googleapis.com/semantic-cs/ij-communit-platform-functions-embeddings.ann'\n",
+        "!wget 'https://storage.googleapis.com/semantic-cs/ij-communit-platform-functions-embeddings.pkl'"
       ]
     },
     {
@@ -145,16 +127,16 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "xRGDaYVdVwaj",
-        "outputId": "382e8ee3-ea25-4a74-93ff-b9df2ed78aa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xRGDaYVdVwaj",
+        "outputId": "382e8ee3-ea25-4a74-93ff-b9df2ed78aa6"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "usageView/src/com/intellij/usages/Usage.java:highlightInEditor  score=0.821\n",
             "void highlightInEditor();\n",
@@ -176,6 +158,7 @@
         }
       ],
       "source": [
+        "import os\n",
         "import openai\n",
         "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
         "\n",
@@ -195,12 +178,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "xfdaTLQXz3di"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -211,6 +194,45 @@
         "### Query: nearest neighbors index (approximate)\n",
         "\n",
         "Instead of comparing query embedding to every vector to find the closest N, let's use an approximate index (built below in [OpenAI Embeddings]() section)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "H-FeVhTQ51e0"
+      },
+      "outputs": [],
+      "source": [
+        "from annoy import AnnoyIndex\n",
+        "\n",
+        "emb_dimensions = 1536 # OpenAI embeddings \n",
+        "emb_index_file = 'ij-communit-platform-functions-embeddings.ann'\n",
+        "index = AnnoyIndex(emb_dimensions, 'dot')\n",
+        "index.load(emb_index_file)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xbTuMdE-0qFo",
+        "outputId": "cf5e298f-c56e-4136-d0c6-554337923875"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Total number of verctors: 175241\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"Total number of verctors: {len(df_csv)}\")"
       ]
     },
     {
@@ -243,57 +265,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from annoy import AnnoyIndex\n",
-        "\n",
-        "emb_dimensions = 1536 # OpenAI embeddings \n",
-        "emb_index_file = 'ij-communit-platform-functions-embeddings.ann'\n",
-        "index = AnnoyIndex(emb_dimensions, 'dot')\n",
-        "index.load(emb_index_file)"
-      ],
-      "metadata": {
-        "id": "H-FeVhTQ51e0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f\"Total number of verctors: {len(df_csv)}\")"
-      ],
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xbTuMdE-0qFo",
-        "outputId": "cf5e298f-c56e-4136-d0c6-554337923875"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Total number of verctors: 175241\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {
         "id": "rP5CpiwVVwak",
-        "outputId": "4c9df021-a47a-430a-89dc-7f8627a1ff1d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "4c9df021-a47a-430a-89dc-7f8627a1ff1d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "usageView/src/com/intellij/usages/Usage.java:highlightInEditor score=0.813\n",
             "void highlightInEditor();\n",
@@ -324,9 +307,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "res"
-      ],
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -335,47 +316,9 @@
         "id": "h3otHeFn5_cl",
         "outputId": "937203b6-bdc7-4f16-d09f-24cc22ec0268"
       },
-      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "    index                                               code   \n",
-              "0    1204                          void highlightInEditor();  \\\n",
-              "1  158545       boolean isHighlightingOfCodeBlocksEnabled();   \n",
-              "2   77438                          long checkHighlighting();   \n",
-              "3  167831                            void hideHighlighter();   \n",
-              "4  158544  boolean isHighlightingOfQuickDocSignaturesEnab...   \n",
-              "\n",
-              "                               function_name   \n",
-              "0                          highlightInEditor  \\\n",
-              "1          isHighlightingOfCodeBlocksEnabled   \n",
-              "2                          checkHighlighting   \n",
-              "3                            hideHighlighter   \n",
-              "4  isHighlightingOfQuickDocSignaturesEnabled   \n",
-              "\n",
-              "                                            filepath  n_tokens   \n",
-              "0       usageView/src/com/intellij/usages/Usage.java         5  \\\n",
-              "1  analysis-api/src/com/intellij/lang/documentati...         9   \n",
-              "2  testFramework/src/com/intellij/testFramework/f...         5   \n",
-              "3    ide-core/src/com/intellij/ide/dnd/DnDEvent.java         5   \n",
-              "4  analysis-api/src/com/intellij/lang/documentati...        11   \n",
-              "\n",
-              "                                              tokens   \n",
-              "0                     [1019, 11415, 644, 9597, 2178]  \\\n",
-              "1  [6245, 374, 30930, 287, 2173, 2123, 30904, 557...   \n",
-              "2                     [4930, 1817, 30930, 287, 2178]   \n",
-              "3                    [1019, 10477, 30930, 261, 2178]   \n",
-              "4  [6245, 374, 30930, 287, 2173, 25310, 9743, 741...   \n",
-              "\n",
-              "                                      code_embedding  similarities  \n",
-              "0  [-0.01926850900053978, -0.001198320067487657, ...      0.813251  \n",
-              "1  [-0.022517485544085503, 0.014456006698310375, ...      0.806812  \n",
-              "2  [-0.034275881946086884, 0.006931202951818705, ...      0.806672  \n",
-              "3  [-0.0321929045021534, 5.1633367547765374e-05, ...      0.801489  \n",
-              "4  [-0.03709271177649498, 0.015990113839507103, 0...      0.793928  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-57db7b70-0745-4142-9f99-eb91c1f72705\">\n",
@@ -543,11 +486,51 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "    index                                               code   \n",
+              "0    1204                          void highlightInEditor();  \\\n",
+              "1  158545       boolean isHighlightingOfCodeBlocksEnabled();   \n",
+              "2   77438                          long checkHighlighting();   \n",
+              "3  167831                            void hideHighlighter();   \n",
+              "4  158544  boolean isHighlightingOfQuickDocSignaturesEnab...   \n",
+              "\n",
+              "                               function_name   \n",
+              "0                          highlightInEditor  \\\n",
+              "1          isHighlightingOfCodeBlocksEnabled   \n",
+              "2                          checkHighlighting   \n",
+              "3                            hideHighlighter   \n",
+              "4  isHighlightingOfQuickDocSignaturesEnabled   \n",
+              "\n",
+              "                                            filepath  n_tokens   \n",
+              "0       usageView/src/com/intellij/usages/Usage.java         5  \\\n",
+              "1  analysis-api/src/com/intellij/lang/documentati...         9   \n",
+              "2  testFramework/src/com/intellij/testFramework/f...         5   \n",
+              "3    ide-core/src/com/intellij/ide/dnd/DnDEvent.java         5   \n",
+              "4  analysis-api/src/com/intellij/lang/documentati...        11   \n",
+              "\n",
+              "                                              tokens   \n",
+              "0                     [1019, 11415, 644, 9597, 2178]  \\\n",
+              "1  [6245, 374, 30930, 287, 2173, 2123, 30904, 557...   \n",
+              "2                     [4930, 1817, 30930, 287, 2178]   \n",
+              "3                    [1019, 10477, 30930, 261, 2178]   \n",
+              "4  [6245, 374, 30930, 287, 2173, 25310, 9743, 741...   \n",
+              "\n",
+              "                                      code_embedding  similarities  \n",
+              "0  [-0.01926850900053978, -0.001198320067487657, ...      0.813251  \n",
+              "1  [-0.022517485544085503, 0.014456006698310375, ...      0.806812  \n",
+              "2  [-0.034275881946086884, 0.006931202951818705, ...      0.806672  \n",
+              "3  [-0.0321929045021534, 5.1633367547765374e-05, ...      0.801489  \n",
+              "4  [-0.03709271177649498, 0.015990113839507103, 0...      0.793928  "
             ]
           },
+          "execution_count": 41,
           "metadata": {},
-          "execution_count": 41
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "res"
       ]
     },
     {
@@ -943,7 +926,7 @@
       "source": [
         "model=\"text-embedding-ada-002\"\n",
         "code_emb_file = \"ij-communit-platform-functions-embeddings.pkl\"\n",
-        "code_emb_index_file = 'ij-communit-platform-functions-embeddings.ann'\n"
+        "code_emb_index_file = 'ij-communit-platform-functions-embeddings.ann'"
       ]
     },
     {
@@ -2055,6 +2038,15 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "EiIaSxdhVwal",
+        "OwXYkt4FVwaw",
+        "UW9nf3EpVwaw",
+        "hvXsCLodVwb3"
+      ],
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".venv",
       "language": "python",
@@ -2072,16 +2064,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.15"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "EiIaSxdhVwal",
-        "OwXYkt4FVwaw",
-        "UW9nf3EpVwaw",
-        "hvXsCLodVwb3"
-      ]
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
